--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="jellyfish logo png" alt="logo da jellyfish">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">JELLY FISH</li>
         </ul>
     </header>
 
