--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nilo Cairo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
@@ -14,6 +17,19 @@
             <li class="cabecalho-lista-item">JELLY FISH</li>
         </ul>
     </header>
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre as Águas-vivas</h2>
+            <p class="escola-texto-um">As águas-vivas são criaturas fascinantes que povoam os oceanos globalmente, caracterizadas por seus corpos gelatinosos em formato de guarda-chuva e tentáculos dotados de nematocistos, usados para capturar presas e se defender. Variam em formas, tamanhos e cores, desde pequenas e transparentes até grandes e vibrantes.</p>
+            <p class="escola-texto-dois">Apesar de sua delicada aparência, são predadores eficientes, alimentando-se de peixes pequenos, plâncton e até mesmo de outras águas-vivas. Habitam tanto águas quentes quanto temperadas, desempenhando papéis cruciais como predadores e presas nos ecossistemas marinhos. </p>
+        </div>
+        <img class="escola-imagem" src="jellyfish 0.2  png" alt="aguas vivinhas">
+    </section>  
+    <section class="estudante">
+        <h2>Algumas Águas-vivas</h2>
+    </section>                                                                                                                                                                                                                                                                                                                                
 
 </body>
-</html>
+</html>   
+
+
