--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nilo Cairo</title>
+    <title>WEB SITE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="jellyfish logo png" alt="logo da jellyfish">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">JELLY FISH</li>
+            <li class="cabecalho-lista-item">JELLYFISH</li>
         </ul>
     </header>
     <section class="escola">
@@ -25,11 +25,38 @@
         </div>
         <img class="escola-imagem" src="jellyfish 0.2  png" alt="aguas vivinhas">
     </section>  
+
     <section class="estudante">
-        <h2>Algumas Águas-vivas</h2>
+        <div class="estudante-todos">
+     <div class="estudante-divisor">
+     <div class="estudante 2">
+        <h2 class="estudante-titulo">Algumas Águas-vivas:</h2>
+        <img class="imagem-aguas" src="Medusa aurelia_ .jpg" alt="imagem da agua viva medusa">
+        <h3 class="estudante-titulo-dois">Água-viva Lua (Aurelia aurita)</h3>
+        <p class="texto-um"> Estas águas-vivas são conhecidas por seus sinos translúcidos em forma de pires e tentáculos delicados.São encontradas em oceanos do mundo todo e frequentemente avistadas perto da superfície.</p>
+     </div>
+        <div class="estudante 3">
+        <img class="imagem-aguas-um" src="Lion Jellyfish .jpg" alt="imagem da agua viva leao">
+        <h4 class="estudante-titulo-tres">Água-viva Juba de Leão (Cyanea capillata)</h4>
+        <p class="texto-dois">Estas águas-vivas são as maiores espécies conhecidas, com diâmetros de sino alcançando até 2 metros. São reconhecíveis por seus tentáculos grossos e fluídos e coloração avermelhada.  </p>
+     </div>
+     <div class="estudante 4">
+        <img class="imagem-aguas-dois" src="Imortal jellyfish .jpg" alt="imagem agua viva imortal">
+        <h5 class="estudante-titulo-quatro">Água-viva Imortal (Turritopsis dohrnii)</h5>
+        <p class="texto-tres"> Esta espécie é notável por sua capacidade única de rejuvenescimento. Quando enfrenta condições adversas, como fome ou danos físicos, pode reverter seu ciclo de vida, voltando ao estágio de pólipo e começando novamente seu desenvolvimento.</p>
+    </div>
+    <div class="estudante 5 ">
+        <img class="imagem-aguas-tres" src="Aequorea victoria .jpg" alt="imagem da agua viva perola">
+        <h6 class="estudante-titulo-cinco"> Água-viva Pérola (Aequorea victoria)</h6>
+        <p class="texto-quatro">É uma espécie encontrada no Pacífico Norte. Conhecida por sua bioluminescência verde, sua proteína fluorescente (GFP) é amplamente usada em pesquisas científicas. Tem um corpo translúcido em forma de cúpula e se alimenta de plâncton.</p>
+    </div>
+
+
+    </div>
     </section>                                                                                                                                                                                                                                                                                                                                
-
+    <footer class="rodape">
+        <img class="rodape-imagem"  src="Jellyfish .jpg" alt=" jELLYFISH ">
+    </footer>
 </body>
-</html>   
-
+</html>  
 
