--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="jellyfish logo png" alt="logo da jellyfish">
@@ -20,43 +24,54 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre as Águas-vivas</h2>
-            <p class="escola-texto-um">As águas-vivas são criaturas fascinantes que povoam os oceanos globalmente, caracterizadas por seus corpos gelatinosos em formato de guarda-chuva e tentáculos dotados de nematocistos, usados para capturar presas e se defender. Variam em formas, tamanhos e cores, desde pequenas e transparentes até grandes e vibrantes.</p>
-            <p class="escola-texto-dois">Apesar de sua delicada aparência, são predadores eficientes, alimentando-se de peixes pequenos, plâncton e até mesmo de outras águas-vivas. Habitam tanto águas quentes quanto temperadas, desempenhando papéis cruciais como predadores e presas nos ecossistemas marinhos. </p>
+            <p class="escola-texto-um">As águas-vivas são criaturas fascinantes que povoam os oceanos globalmente,
+                caracterizadas por seus corpos gelatinosos em formato de guarda-chuva e tentáculos dotados de
+                nematocistos, usados para capturar presas e se defender. Variam em formas, tamanhos e cores, desde
+                pequenas e transparentes até grandes e vibrantes.</p>
+            <p class="escola-texto-dois">Apesar de sua delicada aparência, são predadores eficientes, alimentando-se de
+                peixes pequenos, plâncton e até mesmo de outras águas-vivas. Habitam tanto águas quentes quanto
+                temperadas, desempenhando papéis cruciais como predadores e presas nos ecossistemas marinhos. </p>
         </div>
         <img class="escola-imagem" src="jellyfish 0.2  png" alt="aguas vivinhas">
-    </section>  
+    </section>
 
-    <section class="estudante">
-        <div class="estudante-todos">
-     <div class="estudante-divisor">
-     <div class="estudante 2">
-        <h2 class="estudante-titulo">Algumas Águas-vivas:</h2>
-        <img class="imagem-aguas" src="Medusa aurelia_ .jpg" alt="imagem da agua viva medusa">
-        <h3 class="estudante-titulo-dois">Água-viva Lua (Aurelia aurita)</h3>
-        <p class="texto-um"> Estas águas-vivas são conhecidas por seus sinos translúcidos em forma de pires e tentáculos delicados.São encontradas em oceanos do mundo todo e frequentemente avistadas perto da superfície.</p>
-     </div>
-        <div class="estudante 3">
-        <img class="imagem-aguas-um" src="Lion Jellyfish .jpg" alt="imagem da agua viva leao">
-        <h4 class="estudante-titulo-tres">Água-viva Juba de Leão (Cyanea capillata)</h4>
-        <p class="texto-dois">Estas águas-vivas são as maiores espécies conhecidas, com diâmetros de sino alcançando até 2 metros. São reconhecíveis por seus tentáculos grossos e fluídos e coloração avermelhada.  </p>
-     </div>
-     <div class="estudante 4">
-        <img class="imagem-aguas-dois" src="Imortal jellyfish .jpg" alt="imagem agua viva imortal">
-        <h5 class="estudante-titulo-quatro">Água-viva Imortal (Turritopsis dohrnii)</h5>
-        <p class="texto-tres"> Esta espécie é notável por sua capacidade única de rejuvenescimento. Quando enfrenta condições adversas, como fome ou danos físicos, pode reverter seu ciclo de vida, voltando ao estágio de pólipo e começando novamente seu desenvolvimento.</p>
-    </div>
-    <div class="estudante 5 ">
-        <img class="imagem-aguas-tres" src="Aequorea victoria .jpg" alt="imagem da agua viva perola">
-        <h6 class="estudante-titulo-cinco"> Água-viva Pérola (Aequorea victoria)</h6>
-        <p class="texto-quatro">É uma espécie encontrada no Pacífico Norte. Conhecida por sua bioluminescência verde, sua proteína fluorescente (GFP) é amplamente usada em pesquisas científicas. Tem um corpo translúcido em forma de cúpula e se alimenta de plâncton.</p>
-    </div>
-
-
-    </div>
-    </section>                                                                                                                                                                                                                                                                                                                                
+    <section class="">
+        <div class="estudante-divisor">
+            <h2 class="estudante-titulo">Algumas Águas-vivas:</h2>
+                <div class="estudante-todos">
+                <div class="estudante">
+                    <img class="imagem-aguas" src="Medusa aurelia_ .jpg" alt="imagem da agua viva medusa">
+                    <h3 class="estudante-titulo-dois">Água-viva Lua (Aurelia aurita)</h3>
+                    <p class="texto-um"> Estas águas-vivas são conhecidas por seus sinos translúcidos em forma de pires
+                        e tentáculos delicados.São encontradas em oceanos do mundo todo e frequentemente avistadas perto
+                        da superfície.</p>
+                </div>
+                <div class="estudante">
+                    <img class="imagem-aguas-um " src="Lion Jellyfish .jpg" alt="imagem da agua viva leao">
+                    <h4 class="estudante-titulo-tres">Água-viva Juba de Leão (Cyanea capillata)</h4>
+                    <p class="texto-dois">Estas águas-vivas são as maiores espécies conhecidas, com diâmetros de sino
+                        alcançando até 2 metros. São reconhecíveis por seus tentáculos grossos e fluídos e coloração
+                        avermelhada. </p>
+                </div>
+                <div class="estudante">
+                    <img class="imagem-aguas-dois estudante-todos" src="Imortal jellyfish .jpg" alt="imagem agua viva imortal">
+                    <h5 class="estudante-titulo-quatro ">Água-viva Imortal (Turritopsis dohrnii)</h5>
+                    <p class="texto-tres"> Esta espécie é notável por sua capacidade única de rejuvenescimento. Quando
+                        enfrenta condições adversas, como fome ou danos físicos, pode reverter seu ciclo de vida,
+                        voltando ao estágio de pólipo e começando novamente seu desenvolvimento.</p>
+                </div>
+                <div class="estudante">
+                    <img class="imagem-aguas-tres" src="Aequorea victoria .jpg" alt="imagem da agua viva perola">
+                    <h6 class="estudante-titulo-cinco"> Água-viva Pérola (Aequorea victoria)</h6>
+                    <p class="texto-quatro">É uma espécie encontrada no Pacífico Norte. Conhecida por sua
+                        bioluminescência verde, sua proteína fluorescente (GFP) é amplamente usada em pesquisas
+                        científicas. Tem um corpo translúcido em forma de cúpula e se alimenta de plâncton.</p>
+                </div>
+        </div>
+    </section>
     <footer class="rodape">
-        <img class="rodape-imagem"  src="Jellyfish .jpg" alt=" jELLYFISH ">
+        <img class="rodape-imagem" src="Jellyfish .jpg" alt=" jELLYFISH ">
     </footer>
 </body>
-</html>  
 
+</html>
